<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenCycleCompass</string>
    <string name="app_name_short">OCYCO</string>
    <string name="crash_toast">Leider ist die OpenCycleCompass App abgestürzt, ein Absturzbericht wird gesendet</string>
    <string name="action_settings">Einstellungen</string>
    <string name="welcome_headline">Willkommen bei OpenCycleCompass!</string>
    <string name="welcome">OpenCycleCompass (OCYCO) ist ein Fahrrad Informations- und Navigationssystem.
        Das Ziel ist es, Ihnen eine möglichst für Fahrradfahrer geeignete, schnelle Route zu suchen und
        Ihnen möglichst hilfreiche und konkrete Informationen über Ihren Ankunftszeitpunkt zu geben.
        Sie können entweder Ihre Einstellungen überprüfen, oder direkt eine Route suchen.</string>
    <string name="button_open_settings">Einstellungen</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="general_settings">Allgemeine Einstellungen</string>
    <string name="CB_collect_data">Meine Routendaten dürfen anonymisiert gespeichert und für Routenberechnungen anderer Nutzer verwendet werden.</string>
    <string name="specific_settings">Routenspezifische Einstellungen</string>
    <string name="distance">Wie lange ist die Strecke, die Sie fahren möchten?</string>
    <string name="save">Speichern</string>
    <string name="title_activity_show_data">OpenCycleCompass</string>
    <string name="action_show_data_activity">Navigation</string>
    <string name="preference_file_key">pref_file_key</string>
    <string name="preference_file_key_upload_later">pref_file_key_upload_later</string>
    <string name="tracking_stop">Tracking beenden</string>
    <string name="tracking_stop_notification">Beenden</string>
    <string name="tracking_status_active">Tracking läuft</string>
    <string name="tracking_show_tracking">Anzeigen</string>
    <string name="httpJsonReturnNotificationErrTryCatchHttpJson">Fehler beim Kommunizieren mit dem Server</string>
    <string name="unknownError">Es ist ein unbekannter Fehler aufgetreten.</string>
    <string name="trackUploaded">Track hochgeladen</string>
    <string name="setTime">gewünschte Ankunftszeit einstellen</string>
    <string name="title_activity_upload_track">Upload Track</string>
    <string name="upload_track_name">Name des Tracks</string>
    <string name="upload_track_com">Kommentar (optional)</string>
    <string name="upload_track_name_default">Insert-Name-Here</string>
    <string name="upload_track_com_default">Ihr Kommentar</string>
    <string name="upload_track_duration">Dauer</string>
    <string name="upload_track_length">Länge</string>
    <string name="upload_track_token">Token</string>
    <string name="upload_track_token_regenerate">Token neu generieren</string>
    <string name="upload_track">Hochladen</string>
    <string name="upload_track_delete">Track löschen</string>
    <string name="upload_track_deleted">Track gelöscht</string>
    <string name="upload_track_debugurl">DEBUG: URL</string>
    <string name="upload_track_debugdata">DEBUG: DATA</string>
    <string name="upload_track_later">Später Hochladen</string>
    <string name="upload_track_later_success">Der Track wurde zum späteren Hochladen archiviert.</string>
    <string name="upload_track_error_no_track">Fehler: Der Track konnte nicht verarbeitet werden</string>
    <string name="upload_track_already_uploaded">Dieser Track wurde bereits hochgeladen.</string>
    <string name="api1_base_url">https://ibis.jufo.mytfg.de/api1/</string>
    <string name="api1_token_new">token.php?newtoken=newtoken</string>
    <string name="api1_pushtrack_new">pushtrack.php?newtrack=newtrack</string>
    <string name="upload_error_no_network_try_again_later">Keine Netzwerkverbindung: \n Bitte versuchen Sie es später erneut</string>
    <string name="upload_error_server_unreachable">Fehler: Der Server ist nicht erreichbar \n Bitte versuchen Sie es später erneut</string>
    <string name="upload_track_public_visible">Track öffentlich einsehbar hochladen</string>
    <string name="error">Fehler: </string>
    <string name="km">km</string>
    <string name="desired_arrival_time">Gewünschte Ankunftszeit:</string>
    <string name="desired_arrival_time_defaultval">----</string>
    <string name="driven">gefahren</string>
    <string name="driven_defaultval">---</string>
    <string name="remaining">verbleibend</string>
    <string name="remaining_defaultval">---</string>
    <string name="km_h">km/h</string>
    <string name="current_velocity">akt. Geschw.</string>
    <string name="current_velocity_defaultval">---</string>
    <string name="average_velocity">avg. Geschw.</string>
    <string name="average_velocity_defaultval">---</string>
    <string name="arrival_time">Ank. Zeit</string>
    <string name="arrival_time_defaultval">---</string>
    <string name="time_difference">Zeitdiff.</string>
    <string name="time_difference_defaultval">---</string>
    <string name="required_velocity">notw. Geschw.</string>
    <string name="required_velocity_defaultval">---</string>
    <string name="difference">Diff.</string>
    <string name="difference_defaultval">---</string>
    <string name="map_settings">Karteneinstellungen</string>
    <string name="cb_show_locationOverlay">Position anzeigen</string>
    <string name="cb_show_compassOverlay">Kompass anzeigen</string>
    <string name="cb_show_scaleBarOverlay">Maßstab anzeigen</string>
    <string name="text_size">Textgröße in den Infoboxen:</string>
    <string name="text_size_unit">dp</string>
    <string name="coordinates">" Koordinaten / "</string>
    <string name="tracking_prepare_coords_removed_filter1"><![CDATA["coordinates where tdiff<0.5 or dist<0.5 removed"]]></string>
    <string name="tracking_gps_searching"><![CDATA["GPS wird gesucht ... "]]></string>
    <string name="title_activity_routing">Routenfindung</string>
    <string name="start">Startadresse</string>
    <string name="address_format">Bitte geben sie die Adresse in folgendem Format ein: Straße Hausnummer, Stadt</string>
    <string name="destination">Zieladresse</string>
    <string name="generate_route_button">Route generieren</string>
    <string name="api1_get_route">getroute.php?getroute=getroute</string>
    <string name="findRoute">Route finden</string>
    <string name="start_navigation_button">Navigation starten</string>
    <string name="rout_find_error">Ihre Start- oder Zielort konnte nicht gefunden werden!</string>
    <string name="switch_manuel_distance">Möchten sie die Streckenlänge manuell eingeben?</string>
    <string name="route_type">Routentyp:</string>
    <string name="loading_text">Route wird generiert, bitte warten...</string>
    <string name="switch_user_data">Möchten Sie für Ihre Routenfindung die gesammelten Daten anderer User nutzen?</string>
    <string name="tracking">Tracking - anonym Routendaten sammeln</string>
    <string name="start_tracking">Tracking starten</string>
    <string name="stop_tracking">Tracking stoppen</string>
    <string name="track_archive">Track Archiv (Später Hochladen)</string>
    <string name="track_archive_delete">Track Archiv löschen</string>
    <string name="track_archive_error_reading_file">Interner Fehler: Die archivierten Tracks sind beschädigt.</string>
    <string name="track_archive_error_reading_array">Interner Fehler: Lesen des archivierten Tracks nicht möglich. Datei ist beschädigt.</string>
    <string name="start_from_current_position">Von aktueller Position aus navigieren</string>
    <string name="search_position">Position wird gesucht...</string>
    <string name="switch_timeFactor">Möchten Sie für die Berechnung der Ankunftszeit die gesammelten Daten anderer User nutzen?</string>
    <string name="action_RoutingActivity">Routenfindung</string>
    <string name="action_MainActivity">Startseite</string>
    <string name="loading">Wird geladen...</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_archive">Track Liste</string>
    <string name="info_text_headline">Über das Projekt</string>
    <string name="info_text">OpenCycleCompass (OCYCO) ist ein Fahrrad Informations- und Navigationssystem.
        Das Ziel ist es, Ihnen eine möglichst für Fahrradfahrer geeignete, schnelle Route zu suchen und
        Ihnen möglichst hilfreiche und konkrete Informationen über Ihren Ankunftszeitpunkt zu geben.</string>
    <string name="info_license_headline">Lizenzen</string>
    <string name="info_version_headline">Version</string>
    <string name="info_license">Open Streetmap Karten und Daten:
    <a href ="http://www.openstreetmap.org/copyright/">© OpenStreetMap contributors</a>
    \nOpenCycleCompass App: <a href="http://www.gnu.de/documents/gpl.de.html">GPL v3 Lizenz</a></string>
    <string name="info_authors_headline">Autoren</string>
    <string name="info_authors">Leonard Rapp \nRaphael Lehmann</string>
    <string name="info_jufo_headline">Jugend forscht</string>
    <string name="info_jufo">Das OpenCycleCompass - Projekt ist im Rahmen eines Jugend forscht Projekts von
        Leonard Rapp und Raphael Lehmann am Theodor-Fliedner-Gymnasium Düsseldorf entstanden.
        \nEs hat im Rahmen des Regionalwettbewerbs 2015 den 1. Preis der Kategorie
        Mathematik / Informatik, sowie den Sonderpreis der Rheinbahn gewonnen.</string>
    <string name="action_info">Informationen</string>
    <string name="info_contact_headline">Kontakt</string>
    <string name="info_contact">Homepage: <a href="https://www.open-cycle-compass.de">www.open-cycle-compass.de</a>
    \nMail: support@open-cycle-compass.de</string>
    <string name="upload_track_error_too_short">Der Track ist zu kurz zum Hochladen.</string>
</resources>
