<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.mytfg.jufo.ibis.InfoActivity">

    <item
        android:id="@+id/action_MainActivity"
        android:orderInCategory="100"
        android:title="@string/action_MainActivity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_data_activity"
        android:orderInCategory="100"
        android:title="@string/action_show_data_activity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_RoutingActivity"
        android:orderInCategory="100"
        android:title="@string/action_RoutingActivity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />

</menu>
