<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/general_settings"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/CBCollectData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/CB_collect_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/enter_text_size"
                android:text="@string/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/enter_text_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_size_unit" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/specific_settings"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:labelFor="@+id/enter_distance"
                android:text="@string/distance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/enter_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/enter_distance"
                    android:text="@string/km" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desired_arrival_time" />

                <TextView
                    android:id="@+id/arrivalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desired_arrival_time_defaultval" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="showTimePickerDialog"
                android:text="@string/setTime" />

            <Button
                android:id="@+id/button_findRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/findRoute"
                android:onClick="onClickFindRoute"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onClickstopOnlineTracking"
                android:text="@string/tracking_stop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/map_settings"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_show_locationOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/cb_show_locationOverlay" />

            <CheckBox
                android:id="@+id/cb_show_compassOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/cb_show_compassOverlay" />

            <CheckBox
                android:id="@+id/cb_show_scaleBarOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/cb_show_scaleBarOverlay" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="saveSettings"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>