<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.mytfg.jufo.ibis.ShowDataActivity">

    <item android:id="@+id/auto_center"
        android:title="automatisch zentrieren"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"
        android:checked="true"/>

    <item
        android:id="@+id/action_MainActivity"
        android:orderInCategory="100"
        android:title="@string/action_MainActivity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_RoutingActivity"
        android:orderInCategory="100"
        android:title="@string/action_RoutingActivity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />
</menu>
